--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,19 +24,22 @@
                     <h4>Contact</h4>
                     <ul class="list-unstyled">
                         <li><a href="https://www.cockroachlabs.com/" class="text-white">Cockroach Labs</a></li>
-                        <li><a href="https://github.com/kai-niemi/pestcontrol" class="text-white">Follow on
-                            Github</a></li>
+                        <li><a href="https://github.com/kai-niemi/pestcontrol" class="text-white">Follow on Github</a></li>
                     </ul>
 
                     <h4>Resources</h4>
+
                     <ul class="list-unstyled">
+                        <li><a th:href="@{/}" class="text-white">Home</a></li>
                         <li><a th:href="@{/cluster}" class="text-white">Cluster</a></li>
                         <li><a th:href="@{/metrics}" class="text-white">Metrics</a></li>
                         <li><a th:href="@{/api/browser}" class="text-white">API Explorer</a></li>
                         <li><a th:href="@{/api}" class="text-white">API</a></li>
+
                         <li class="nav-item" sec:authorize="!isAuthenticated()">
                             <a class="btn btn-outline-primary" th:href="@{/login}">[[#{navigation.login}]]</a>
                         </li>
+
                         <li>
                             <form class="d-flex mt-3 mt-lg-0" role="search"
                                   sec:authorize="isAuthenticated()" th:action="@{/logout}" method="post">
