--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,6 +42,7 @@
                     <label for="cluster-id">Cluster ID</label>
                 </div>
 
+<!--
                 <div class="form-floating mb-3">
                     <div class="form-check">
                         <input th:field="*{useFileCredentials}" class="form-check-input" type="checkbox"
@@ -63,12 +64,13 @@
                            id="password" placeholder="Password">
                     <label for="password">SQL user password</label>
                 </div>
+-->
 
                 <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
 
                 <hr class="my-4">
                 <small class="text-body-secondary">By signing in, you request a
-                    <a href="https://www.cockroachlabs.com/docs/stable/cluster-api">Cluster API</a> session token. Only self-hosted clusters are supported.</small>
+                    <a href="https://www.cockroachlabs.com/docs/stable/cluster-api">Cluster API</a> session token using pre-configured credentials.</small>
             </form>
         </div>
     </div>
