--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,6 +72,8 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 gap-2">
                         <li class="nav-item">
+                            <a th:href="@{/}" class="btn btn-outline-light">Home</a></li>
+                        <li class="nav-item">
                             <a th:href="@{/cluster}" class="btn btn-outline-light">Cluster</a></li>
                         <li class="nav-item">
                             <a th:href="@{/metrics}" class="btn btn-outline-light">Metrics</a></li>
