--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,7 +11,7 @@
         <p class="float-end mb-1">
             <a href="#">Back to top</a>
         </p>
-        <p class="mb-1">&copy; 2024 Pest Control &trade;</p>
+        <p class="mb-1">&copy; 2024-2026 Pest Control &trade;</p>
         <p class="mb-0">New to CockroachDB? <a href="https://cockroachlabs.com">Visit the homepage</a>.</p>
     </div>
 </footer>
